--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -29,6 +29,6 @@
   <h2>Data Security</h2>
   <p>Data is securely transmitted and stored locally. We implement reasonable safeguards, but users assume submission risks.</p>
   <h2>Contact</h2>
-  <p>Email: <a href="mailto:support@mysidecar.com">support@mysidecar.com</a></p>
+  <p>Email: <a href="mailto:yan@mysidecar.ai">yan@mysidecar.ai</a></p>
 </body>
 </html>
